// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Throw error on invalid doc 1`] = `
"Unexpected doc 'boolean', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 2`] = `
"Unexpected doc 'boolean', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 3`] = `
"Unexpected doc 'boolean', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 4`] = `
"Unexpected doc 'boolean', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 5`] = `
"Unexpected doc 'number', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 6`] = `
"Unexpected doc 'number', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 7`] = `
"Unexpected doc 'number', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 8`] = `
"Unexpected doc 'number', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 9`] = `
"Unexpected doc 'number', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 10`] = `
"Unexpected doc 'number', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 11`] = `
"Unexpected doc 'number', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 12`] = `
"Unexpected doc 'number', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 13`] = `
"Unexpected doc 'bigint', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 14`] = `
"Unexpected doc 'bigint', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 15`] = `
"Unexpected doc 'symbol', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 16`] = `
"Unexpected doc 'symbol', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 17`] = `
"Unexpected doc 'function', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 18`] = `
"Unexpected doc 'function', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 19`] = `
"Unexpected doc 'function', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 20`] = `
"Unexpected doc 'function', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 21`] = `
"Unexpected doc.type 'undefined'.
Expected it to be 'cursor', 'indent', 'align', 'trim', 'group', 'fill', 'if-break', 'indent-if-break', 'line-suffix', 'line-suffix-boundary', 'line', 'label', or 'break-parent'."
`;

exports[`Throw error on invalid doc 22`] = `
"Unexpected doc.type 'undefined'.
Expected it to be 'cursor', 'indent', 'align', 'trim', 'group', 'fill', 'if-break', 'indent-if-break', 'line-suffix', 'line-suffix-boundary', 'line', 'label', or 'break-parent'."
`;

exports[`Throw error on invalid doc 23`] = `
"Unexpected doc 'undefined', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 24`] = `
"Unexpected doc 'undefined', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 25`] = `
"Unexpected doc 'null', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 26`] = `
"Unexpected doc 'null', 
Expected it to be 'string' or 'object'."
`;

exports[`Throw error on invalid doc 27`] = `"Unexpected doc '[object Promise]'."`;

exports[`Throw error on invalid doc 28`] = `"Unexpected doc '[object Promise]'."`;

exports[`Throw error on invalid doc 29`] = `"Unexpected doc '[object Generator]'."`;

exports[`Throw error on invalid doc 30`] = `"Unexpected doc '[object Generator]'."`;

exports[`Throw error on invalid doc 31`] = `"Unexpected doc '[object RegExp]'."`;

exports[`Throw error on invalid doc 32`] = `"Unexpected doc '[object RegExp]'."`;

exports[`Throw error on invalid doc 33`] = `"Unexpected doc '[object Date]'."`;

exports[`Throw error on invalid doc 34`] = `"Unexpected doc '[object Date]'."`;

exports[`Throw error on invalid doc 35`] = `"Unexpected doc '[object Error]'."`;

exports[`Throw error on invalid doc 36`] = `"Unexpected doc '[object Error]'."`;

exports[`Throw error on invalid doc 37`] = `"Unexpected doc '[object Uint8Array]'."`;

exports[`Throw error on invalid doc 38`] = `"Unexpected doc '[object Uint8Array]'."`;

exports[`Throw error on invalid doc 39`] = `"Unexpected doc '[object Uint8Array]'."`;

exports[`Throw error on invalid doc 40`] = `"Unexpected doc '[object Uint8Array]'."`;

exports[`Throw error on invalid doc 41`] = `
"Unexpected doc.type 'invalid-type'.
Expected it to be 'cursor', 'indent', 'align', 'trim', 'group', 'fill', 'if-break', 'indent-if-break', 'line-suffix', 'line-suffix-boundary', 'line', 'label', or 'break-parent'."
`;

exports[`Throw error on invalid doc 42`] = `
"Unexpected doc.type 'invalid-type'.
Expected it to be 'cursor', 'indent', 'align', 'trim', 'group', 'fill', 'if-break', 'indent-if-break', 'line-suffix', 'line-suffix-boundary', 'line', 'label', or 'break-parent'."
`;

exports[`Throw error on invalid doc 43`] = `
"Unexpected doc.type 'undefined'.
Expected it to be 'cursor', 'indent', 'align', 'trim', 'group', 'fill', 'if-break', 'indent-if-break', 'line-suffix', 'line-suffix-boundary', 'line', 'label', or 'break-parent'."
`;

exports[`Throw error on invalid doc 44`] = `
"Unexpected doc.type 'undefined'.
Expected it to be 'cursor', 'indent', 'align', 'trim', 'group', 'fill', 'if-break', 'indent-if-break', 'line-suffix', 'line-suffix-boundary', 'line', 'label', or 'break-parent'."
`;
